[project]
name = "deepsearch"
version = "0.1.0"
description = "DeepSearch AI Swarm - Research Grade Project with Agent Lightning."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "trafilatura>=1.6.0",
    "duckduckgo-search>=3.8.5",
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "agentlightning",
    "rich"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
